#109: fixing share button layout (text align centre) on Android

--- a/static/scss/module_modal_bp1.scss
+++ b/static/scss/module_modal_bp1.scss
@@ -21,7 +21,6 @@
 
 .modal-share-buttons {
   .button {
-    display: block;
     margin: 0 auto rem(10) auto;
   }
 
